--- a/css/style.css
+++ b/css/style.css
@@ -10,21 +10,54 @@
 }
 
 #header{
-    position: relative;
     width: 100%;
-    padding: 10px;
-    background-color: rgb(95, 92, 92);
+    background-color: #272727;
 }
 
 #logo{
-    width: 100px;
+    display: block;
+    width: 200px;
+    margin: auto;
+    padding: 20px;
 }
 
-#description{
-    display: inline-block;
+.products{
+    background-color: white;
+}
+
+.container-products{
+    padding: 20px;
+    width: 40%;
+}
+
+.title{
+    color: #272727;
     font-size: 20px;
-    color: white;
-    position: absolute;
-    right: 50px;
-    top: 40%;
+}
+
+.cap{
+    width: 200px;
+    box-shadow: 10px 10px 15px #272727;
+    display: block;
+    margin: auto;
+    margin-bottom: 30px;
+    transition: 1s;
+}
+
+.cap:hover{
+    width: 250px;
+}
+
+.desc{
+    color: #272727;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.price{
+    color: black;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
 }
