--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -13,21 +12,28 @@
 #header{
     width: 100%;
     background-color: #272727;
+    position: relative;
+    right: 0;
 }
 
 #logo{
     display: block;
-    width: 200px;
+    width: 150px;
     margin: auto;
     padding: 20px;
 }
 
 .products{
     background-color: white;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    
 }
 
 .container-products{
-    width: 50%;
+    max-width: 200px;
+   overflow: hidden;
 }
 
 .title{
@@ -37,7 +43,7 @@
 
 .cap{
     width: 150px;
-    box-shadow: 10px 10px 15px #272727;
+    box-shadow: 8px 8px 15px rgb(0, 0, 0, .3);
     display: block;
     margin: auto;
     margin-bottom: 30px;
@@ -66,12 +72,60 @@
     background-color: #272727;
 }
 
-.footer{
-    display: inline-block;
-    width: 50%;
+.where{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    background-color: rgb(204, 197, 197, .2);
 }
 
-.footer a{
+.where-title{
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+.where-desc{
+    font-size: 15px;
+    margin-bottom: 10px;
+}
+
+.where-map{
+    border-radius: 10px;
+    box-shadow: 8px 8px 15px rgb(0, 0, 0, .3);
+}
+
+.footer{
+   display: flex;
+   justify-content: center;
+   flex-direction: column;
+   align-items: center;
+   padding: 20px;
+}
+
+.footer-title{
     color: white;
+    font-size: 16px;
+}
+
+.footer-link a{
+    color: rgb(204, 197, 197, .8);
     text-decoration: none;
+    font-size: 13px;
+}
+
+@media screen and (max-width: 1200px){
+    .products{
+        display: block;
+    }
+
+    .container-products{
+        display: inline-block;
+        margin: 5px;
+    }
+
+    .cap:hover{
+        width: 150px;
+    }
 }
