--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,12 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.container{
-    max-width: 840px;
-    margin: auto;
+.frete-title{
+    background-color: purple;
+    color: white;
+    padding: 5px;
+    text-align: center;
+    font-size: 13px;
 }
 
 #header{
@@ -18,7 +21,7 @@
 
 #logo{
     display: block;
-    width: 150px;
+    width: 200px;
     margin: auto;
     padding: 20px;
 }
@@ -72,6 +75,8 @@
     background-color: #272727;
 }
 
+/* localização */
+
 .where{
     display: flex;
     justify-content: center;
@@ -96,24 +101,47 @@
     box-shadow: 8px 8px 15px rgb(0, 0, 0, .3);
 }
 
+/* footer */
+
 .footer{
    display: flex;
    justify-content: center;
-   flex-direction: column;
-   align-items: center;
-   padding: 20px;
+   padding: 30px;
 }
 
-.footer-title{
+.footer-help, .footer-about{
+    margin-left: 50px;
+}
+
+.footer-help-title, .footer-about-title{
+    font-size: 14px;
     color: white;
-    font-size: 16px;
+    margin-bottom: 10px;
 }
 
-.footer-link a{
+.footer-help-link, .footer-about-link{
+    list-style: none;
+    list-style-type: none;
+}
+
+.footer-help-link a, .footer-about-link a{
     color: rgb(204, 197, 197, .8);
     text-decoration: none;
-    font-size: 13px;
+    font-size: 12px;
+    
 }
+
+.pict{
+    background-image: url('/img/teste2.jpg');
+    background-repeat: no-repeat;
+    background-size: cover; 
+    background-attachment: fixed; 
+    background-position: center; 
+    width: 100%; 
+    height: 100vh; 
+}
+
+/* responsividade */
 
 @media screen and (max-width: 1200px){
     .products{
