creating skeleton loading

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,8 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
+
 .frete-title{
     background-color: purple;
     color: white;
@@ -29,7 +31,7 @@
 .products{
     background-color: white;
     padding: 20px;
-
+    height: 365px;
 }
 
 .carousel{
@@ -53,16 +55,31 @@
 
 .cap{
     width: 150px;
+    height: 150px;
     box-shadow: 8px 8px 15px rgb(0, 0, 0, .3);
     display: block;
     margin: auto;
     margin-bottom: 30px;
     transition: 1s;
     cursor: pointer;
+    transform: scale(.9);
 }
 
 .cap:hover{
-    width: 180px;
+    transform: scale(1);
+}
+
+.skeleton{
+    animation: skeleton-loading 1s linear infinite alternate;
+}
+
+@keyframes skeleton-loading {
+    0% {
+        background-color: hsl(200, 20%, 70%);
+    }
+    100% {
+        background-color: hsl(200, 20%, 95%);
+    }
 }
 
 .desc{
