--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,8 +30,7 @@
 
 .products{
     background-color: white;
-    padding: 20px;
-    height: 365px;
+    height: 350px;
 }
 
 .carousel{
@@ -56,7 +55,6 @@
 .cap{
     width: 150px;
     height: 150px;
-    box-shadow: 8px 8px 15px rgb(0, 0, 0, .3);
     display: block;
     margin: auto;
     margin-bottom: 30px;
@@ -71,6 +69,19 @@
 
 .skeleton{
     animation: skeleton-loading 1s linear infinite alternate;
+    border-radius: 2px;
+}
+
+.skeleton-text{
+    width: 100%;
+    height: .9rem;
+    margin-bottom: .25rem;
+    border-radius: 2px;
+}
+
+.skeleton-text:last-child{
+    margin-bottom: 0;
+    width: 80%;
 }
 
 @keyframes skeleton-loading {
@@ -81,6 +92,8 @@
         background-color: hsl(200, 20%, 95%);
     }
 }
+
+
 
 .desc{
     color: rgb(88, 191, 255);
